--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "node": "^20.5.0",
     "node-cache": "^5.1.2"
   },
   "engines": {
