--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "Oauth",
-  "version": "1.0.0",
+  "name": "node-js-getting-started",
+  "version": "0.1.5",
+  "description": "A sample Node.js app using Express 4",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node project/start.js"
   },
   "dependencies": {
     "@hubspot/api-client": "^9.1.0",
     "axios": "^1.4.0",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "node-cache": "^5.1.2",
-    "open": "^9.1.0",
-    "pug": "^3.0.2",
-    "request-promise-native": "^0.0.0"
-  }
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.15.2",
+    "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
+    "node-cache": "^5.1.2"
+  },
+  "engines": {
+    "node": "8.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
